# music-player

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp  music_player.cpp  music_player.hpp  playlist.cpp  playlist.hpp  song.cpp  song.hpp
